--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./Financtionary/src/Main.jsx"></script>
+    <script type="module" src="/src/Main.jsx"></script>
     <!-- /src/Main.jsx -->
   </body>
 </html>
