--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -15,7 +15,7 @@
 
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/Main.jsx"></script>
+  <script type="module" src="/src/main.jsx"></script>
   <!-- /src/Main.jsx -->
 </body>
 
