--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" href="./src/assets/logo.jpeg" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    integrity="sha512-KZwLsG0GXlZZg1EZ0EOpFEHg5Mez3Ldjev1DV+I2FIv0FvH+He7Rs8UOkLmTpH1T6a95NWFC5TV5o9byl6b+qg=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Financtionary</title>
-  <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-</head>
-
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
-  <!-- /src/Main.jsx -->
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="./src/assets/logo.jpeg"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Financtionary</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-KZwLsG0GXlZZg1EZ0EOpFEHg5Mez3Ldjev1DV+I2FIv0FvH+He7Rs8UOkLmTpH1T6a95NWFC5TV5o9byl6b+qg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/Main.jsx"></script>
+  </body>
 </html>
